batched alignment, calling and norm processes

--- a/README
+++ b/README
@@ -44,11 +44,13 @@ Testing the pipelin with minimal number of reads
 Mainly we want to see how the vcf merging works; think we were filtering reads that were incoreect size
 
 
+25/09/23
+----
+Issue with nextflow process when generating large number of files: see slack issue for details: https://nextflow.slack.com/archives/C02T98A23U7/p1695673765111919
+Solution for now is to compress output in dir and move that around, then iterate through the files in each work dir
+
+
 TODO
 ---
-Filter out clusters with less than two/five reads
-Filter out VCF files with no vairant calls
 Modularise the pipeline
 Create module config to specify params for each module
-Add docker/singualrity support
-Update base.config to specify resources
